--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.21.0",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.14",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "prisma": "^5.21.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.6.3"
   }
 }
